# CIGA

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
modules/: CMakeLists.txt
modules/base/: CMakeLists.txt  CMakeLists.txt~
modules/base/include/base/: base.h  full_matrix.h  vector_wrapper.h
modules/solvers/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp~
src/base/: CMakeLists.txt  CMakeLists.txt~
src/base/include/: Arithmetics.cpp  arithmetics.h  arithmetics.h~  base.h  base.h~  full_matrix.h  vector_wrapper.h  vector_wrapper.h~
src/base/src/: main.cpp  main.cpp~
src/math/: CMakeLists.txt
test/: CMakeLists.txt  CMakeLists.txt~
test/base/: CMakeLists.txt  arithmetics_test.cpp  full_matrix_test.cpp  vector_wrapper_tests.cpp
